--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,24 @@
 
 # idea
 .idea
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+
+# phpMyAdmin
+irb-x/
+irb-x@
+irb-x*
+
+# Piwic
+analytics/
+analytics@
+analytics*
+
+# Let's Encrypt
+.well-known/
+.well-known@
+.well-known*
